css/style.css
/* Import Google Fonts with light, medium, and bold weights */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Figtree:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

/* Colors */

:root {
	/* Sage Green (Primary Color): */
	--primary-color: hsl(162, 38%, 25%);
	/* Dusty Green (Accent Color): */
	--accent-color: hsl(163, 25%, 36%);
	/* Dusty Pink (Limited Accent Color): */
	--accent-color-alt: hsl(340, 30%, 70%);
	/* Dusty Red (Alert: Error): */
	--alert-error: hsl(0, 56%, 58%);
	/* Light Green (Neutral for Backgrounds): */
	--background-color: hsl(162, 28%, 85%);
	/* Lighter Charcoal (For Larger Text and Contrast): */
	--text-primary-color: #444444;
	/* Deep Charcoal (For Text and Contrast): */
	--text-darker-color: #2a2a2a;
	/* Light Backgrounds/Elements): */
	--surface-color: hsl(162, 10%, 95%);
	/* Fonts */
	--header-font-family: 'Figtree', sans-serif;
	--body-font-family: 'Lato', sans-serif;
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

a:link, a:visited {
	color: var(--text-primary-color);
}

a:hover, a:visited:hover a:focus, a:visited:focus {
	color: var(--accent-color-alt);
}

a.footnote-anchor {
	color: var(--accent-color);
	font-family: var(--body-font-family);
	font-size: 0.8em;
	font-weight: 700;
	line-height: 1.4;
	vertical-align: super;
}

#alerts {
	background-color: var(--surface-color);
	border-radius: 0 0 0.3125em 0.3125em;
	box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.1);
	display: none;
	margin: 0 auto 1.25em auto;
	max-width: 50rem;
	padding: 1.25em 1.75em;
	width: 100%;
}

#alerts:has(.alert-error) {
	border-top: 0.25em solid var(--alert-error);
}

.alert-error {
	align-items: center;
	color: var(--alert-error);
	display: flex;
	font-family: var(--body-font-family);
	font-size: 1em;
	font-weight: 700;
	line-height: 1.4;
}

.feather {
	width: 1.25rem;
	height: 1.25rem;
}

.alert-error .feather {
	margin-right: 0.25em;
	vertical-align: middle;
}

article {
	background-color: var(--surface-color);
	border-radius: 0 0 0.3125em 0.3125em;
	border-top: 0.25em solid var(--accent-color);
	box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.1);
	margin: 0 auto 1.25em auto;
	max-width: 50rem;
	padding: 1.25em 1.75em;
	width: 100%;
}

/* add a border to the first footnote inside of article */
.footnote:first-of-type {
	border-top: .1rem solid var(--accent-color);
	margin-top: 2em;
	padding-top: 2em;
}

.footnote {
	align-items: start;
	display: flex;
	font-size: .9em;
	margin-bottom: 1rem;
}

.footnote-number {
	flex-shrink: 0;
	font-size: .9em;
	margin-right: 1rem;
}

.footnote-content {
	flex-grow: 1;
}


article .substack-post-description {
	color: var(--text-darker-color);
	font-family: var(--body-font-family);
	font-size: 1.15em;
	line-height: 1.4;
	margin-bottom: 1em;
	margin-top: 0.5em;
}

article .substack-post-date {
	color: var(--accent-color);
	font-family: var(--body-font-family);
	font-size: .9em;
	font-weight: 700;
	line-height: 1.4;
	text-transform: uppercase;
}

article p {
	color: var(--text-primary-color);
	font-family: var(--body-font-family);
	font-size: 1em;
}

article ul, article ol {
	margin-bottom: 1em;
	padding-left: 2em;
}

article img {
	max-width: 100%;
	max-height: 50vh;
	height: auto;
	display: block;
	margin: 0 auto 1em auto;
	object-fit: contain;
}

article h2 {
	margin-top: 0;
}

body {
	background-color: var(--background-color);
	color: var(--text-primary-color);
	font-family: var(--body-font-family);
	font-size: 16px;
	line-height: 1.5;
	padding: 1.25em;
	opacity: 0;
	transition: opacity 0.5s ease-in-out;
}

body.loaded {
	opacity: 1;
}

footer {
	bottom: 0;
	color: var(--text-primary-color);
	padding: 1em;
	position: relative;
	text-align: center;
	width: 100%;
}

footer #copyright {
	font-family: var(--header-font-family);
	font-weight: 300;
}

h1, h2, h3, h4, h5, h6 {
	color: var(--text-darker-color);
	font-family: var(--header-font-family);
	font-weight: 400;
	margin-top: 1.25em;
	margin-bottom: .50em;
}

h1 a:link, h2 a:link, h3 a:link, h4 a:link, h5 a:link, h6 a:link {
	text-decoration: none;
}

h1 {
	font-size: 2em;
}

h2 {
	font-size: 1.5em;
}

h3 {
	font-size: 1.25em;
}

h4 {
	font-size: 1.15em;
}

i, em {
	font-family: var(--body-font-family);
	font-style: italic;
}

p {
	margin-bottom: 1em;
}

.main-container {
	margin: 0 auto;
	max-width: 50rem;
	width: 100%;
}


.nav-title, .nav-title a {
	font-family: var(--header-font-family);
	font-size: 2em;
	font-weight: 500;
	text-align: left;
	text-decoration: none !important;
}

.top-nav {
	align-items: center;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	padding: 1em;
}


.nav-links {
	display: flex;
	flex: 1 1 auto;
	justify-content: flex-end;
}

.nav-links a {
	color: var(--text-primary-color);
	font-family: var(--header-font-family);
	font-size: 1.15em;
	font-weight: 500;
	margin-left: 1em;
	text-decoration: none !important;
}

.nav-links a:is(:hover, :focus, :active), .nav-links a:visited:is(:hover, :focus, :active),
a.nav-title:is(:hover, :focus, :active), a.nav-title:visited:is(:hover, :focus, :active),
a:link, a:visited, a:hover, a:visited:hover a:focus, a:visited:focus {
	text-decoration: underline;
}

.nav-links a:is(:hover, :focus, :active), .nav-links a:visited:is(:hover, :focus, :active),
a.nav-title:is(:hover, :focus, :active), a.nav-title:visited:is(:hover, :focus, :active) {
	color: var(--accent-color);
}

ul.nav-links {
	list-style: none;
}

@media (max-width: 600px) {
	.nav-title, .nav-links {
		flex-basis: 100%;
		text-align: center;
	}

	.nav-title {
		margin-bottom: .5em;
	}

	.nav-links {
		display: flex;
		flex-direction: column;
		justify-content: center;
		margin: 0 auto;
		padding-left: 0;
	}

	.nav-links a {
		margin-bottom: 0.5em;
		margin-left: 0;
	}
}

li>p {
	margin-bottom: 0;
	margin-top: 0;
}

